fix bottom margin begin overlapped by footer

--- a/src/pages/community/community.scss
+++ b/src/pages/community/community.scss
@@ -158,6 +158,8 @@
 }
 
 .resources {
+  margin-bottom: 5rem;
+
   header {
     background-color: white;
     width: 100%;
